--- a/SupportedClients.html
+++ b/SupportedClients.html
@@ -9,4 +9,10 @@
 3. Edge <br>
 4. Safari <br> 
 </ol>
+
+<p> The following devices are supported below:</p>
+<ol>
+    1. Android <br>
+    2. ios <br>
+</ol>
     </html>
