--- a/SupportedClients.html
+++ b/SupportedClients.html
@@ -1,18 +1,27 @@
-<!doctype>
+<!DOCTYPE html>
 <html>
 
 <header> Supported websites and devices</header>
+
+<p> The best efforts are made to make the website available to everyone.</p>
+
 <p> All the following browsers are supported</p>
 <ol> 
 1. Google Chrome <br> 
 2. Firefox <br>
 3. Edge <br>
 4. Safari <br> 
+5. Opera <br>
 </ol>
 
 <p> The following devices are supported below:</p>
 <ol>
     1. Android <br>
     2. ios <br>
+    3. Windows <br>
+    4. Linux <br>
+    5. macOS <br>
 </ol>
+
+
     </html>
