--- a/SupportedClients.html
+++ b/SupportedClients.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<header> Supported websites and devices</header>
+<head> Supported websites and devices</head>
 
 <p> The best efforts are made to make the website available to everyone.</p>
 
@@ -22,6 +22,8 @@
     4. Linux <br>
     5. macOS <br>
 </ol>
+
+<p> Desktops, laptops and phones</p>
 
 
     </html>
