--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
 <h1>This is a sample mock up presentation of an ecommerce website.</h1>
 
-<p>This website is meant to replicate a demonstration of web design principles.</p>
+<p>This website is meant to replicate a demonstration of web design principles and technology use.</p>
 <p> This is meant for my personal learning. If there is anything that needs to removed due to copyright infringement, please inform me through my contact information.</p>
 
 <img src = "./jpegs/shoppingphone.jpg" alt = "woman shopping" width = 250 height = 250 class = center>
