--- a/welcome.html
+++ b/welcome.html
@@ -5,13 +5,15 @@
 </head>
 <div class="header">
     <h1>Welcome!</h1>
-    <p>Subscription ecommerce hub</p>
+    <p>Subscription Ecommerce Hub</p>
 </div> 
 
+<p> A leading platform in providing different subscription services for casual professionals and consumers.</p>
 
 
 
 <a href="about.html"> Visit the about page to see more about the page!</a> <br>
+<a href=""> Supported Browsers and devices </a> <br>
 <a href="contact.html"> Contact me</a> <br>
 </html>
 
