--- a/shopping.html
+++ b/shopping.html
@@ -15,10 +15,12 @@
 <p4> Software </p4>
 <p5> Tax </p5>
 <p6> Banking </p6>
+<p7> Recreation </p7>
 
 <a href = "welcome.html"> Welcome</a>
+<a href = "shopping.html"> Shopping </a>
 <a href="about.html"> Visit the about page to see more about the page!</a> <br>
-<a href=""> Supported Browsers and devices </a> <br>
+<a href="SupportedClients.html"> Supported Browsers and devices </a> <br>
 <a href="contact.html"> Contact me</a> <br>
 </html>
 
