--- a/about.html
+++ b/about.html
@@ -17,6 +17,6 @@
 <p> This is meant for my personal learning. If there is anything that needs to removed due to copyright infringement, please inform me through my contact information.</p>
 
 <img src = "./jpegs/shoppingphone.jpg" alt = "woman shopping" width = 250 height = 250 class = center>
-
+<a href = "welcome.html" > Welcome</a>
 </body>
 </html> 
