--- a/shopping.html
+++ b/shopping.html
@@ -7,15 +7,18 @@
     <h1>Subscription shopping</h1>
     <p>Subscription types</p>
 </div> 
-
-<p> Subscription types</p>
-<p1> Retail shopping </p1>
-<p2> Restaurant food</p2>
-<p3> Transportation </p3>
-<p4> Software </p4>
-<p5> Tax </p5>
-<p6> Banking </p6>
-<p7> Recreation </p7>
+<p1>
+     Subscription types <br>
+     Retail shopping <br>
+     Restaurant and Grocery orders <br>
+     Transportation <br>
+     Software <br>
+     Tax <br>
+     Banking <br>
+     Recreation <br>
+     News <br>
+</p1>
+<img src = "./jpegs/subscriptions.jpg" alt = "Sub shopping" width = 250 height = 250 class = center>
 
 <a href = "welcome.html"> Welcome</a>
 <a href = "shopping.html"> Shopping </a>
