--- a/welcome.html
+++ b/welcome.html
@@ -11,9 +11,9 @@
 <p> A leading platform in providing different subscription services for casual professionals and consumers.</p>
 
 
-
+<a href = shopping.html> Shopping</a> <br>
 <a href="about.html"> Visit the about page to see more about the page!</a> <br>
-<a href=""> Supported Browsers and devices </a> <br>
+<a href="SupportedClients.html"> Supported Browsers and devices </a> <br>
 <a href="contact.html"> Contact me</a> <br>
 </html>
 
