--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 </body>
 
 <a href = "welcome.html"> Welcome page</a>
-<a href = ""> Supported browsers and devices</a>
+<a href = "SupportedClients.html"> Supported browsers and devices</a>
 <a href="about.html"> Visit the about page to see more about the page!</a> 
 
 </html>
