--- a/welcome.html
+++ b/welcome.html
@@ -10,7 +10,7 @@
 
 <p> A leading platform in providing different subscription services for casual professionals and consumers.</p>
 
-
+<img src = "./jpegs/shoppingphone.jpg" alt = "woman shopping" width = 250 height = 250 class = center> 
 <a href = shopping.html> Shopping</a> <br>
 <a href="about.html"> Visit the about page to see more about the page!</a> <br>
 <a href="SupportedClients.html"> Supported Browsers and devices </a> <br>
