--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,11 @@
 <body>I am the only developer on this project right now. I am an aspiring tech professional working on my tech portfolio.
     If you have any suggestions or advice, please contact me through github: mtangtran or my email: michaeltangtran@gmail.com.
     This project is meant to be a demonstration of services. No money or compension is being received through the use of this service.
+    This website currently sends data to no where.
 </body>
 
 <a href = "welcome.html"> Welcome page</a>
 <a href = "SupportedClients.html"> Supported browsers and devices</a>
 <a href="about.html"> Visit the about page to see more about the page!</a> 
-
+<p> Produced in 2022 </p>
 </html>
